# dev-lmrs

./: Cargo.toml
crates/core/: Cargo.toml
crates/core/examples/: basic.rs
crates/core/src/: device.rs  dtype.rs  error.rs  lib.rs  ops.rs  shape.rs  tensor.rs
crates/cudit/: Cargo.toml
crates/cudit/src/: compile.rs  config.rs  error.rs  generate.rs  lib.rs  model.rs  parser.rs  pipeline.rs
crates/kernels/: Cargo.toml  build.rs
crates/kernels/examples/: demo.rs
crates/kernels/kernels/: elementwise.cu  matmul.cu  memory.cu  normalization.cu  rope.cu  saxpy.cu  scale_ops.cu  softmax.cu  vector_add.cu
crates/kernels/src/: lib.rs
